Make album cover bigger; fix some vertical spacing on small screens

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,6 +38,7 @@ h1, h2, h3, h4, h5, figure, figcaption {
   flex-direction: column;
   min-height: 100vh;
   gap: 40px;
+  padding-top: $logoHeight + 40px;
 }
 
 .content {
@@ -69,10 +70,10 @@ h1, h2, h3, h4, h5, figure, figcaption {
 
 .album-cover {
   display: block;
-  width: 300px;
-  height: 300px;
+  width: 500px;
+  height: 500px;
   border-radius: $radius;
-  margin: 0 0 20px;
+  margin: 0 0 40px;
 }
 
 ul.audio {
